--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,6 +36,7 @@ body {
   flex-direction: column;
   box-sizing: border-box;
   min-height: 100%;
+  min-width: 1160px;
   font-family: rubik, sans-serif;
   font-style: normal;
   font-size: 18px;
@@ -76,6 +77,7 @@ body {
 .page-header {
   background-color: #ffe17f;
   Width: 1160px;
+  min-height: 186px;
   margin: 40px auto 0 auto;
   position: relative;
 }
@@ -84,7 +86,7 @@ body {
   font-family: raleway, sans-serif;
   font-style: normal;
   font-weight: 800;
-  font-size: 45px;
+  font-size: 50px;
   line-height: 50px;
   color: #000000;
 }
@@ -108,7 +110,7 @@ body {
 .navigation-form-search {
   width: 525px;
   margin-left: 60px;
-  padding-top: 50px;
+  padding-top: 47px;
   padding-bottom: 30px;
 }
 
@@ -127,7 +129,7 @@ body {
   background-image: url("../images/icon\ \(search\).svg");
   background-repeat: no-repeat;
   background-position: 16px;
-  padding: 8px 14px 8px 44px;
+  padding: 8px 14px 8px 42px;
   font: inherit;
 }
 
@@ -148,6 +150,8 @@ body {
 
 .navigation-form-search .button {
   text-align: center;
+  font-size: 16px;
+  line-height: 20px;
   color: #000000;
   background: #FFE17F;
   border: 2px solid #000000;
@@ -184,7 +188,7 @@ body {
 .navigation-first {
   display: flex;
   justify-content: space-between;
-  padding-top: 50px;
+  padding-top: 46px;
   width: 470px;
   margin-top: 5px;
 }
@@ -204,6 +208,7 @@ body {
 
 
 .navigation-item {
+  display: flex;
   position: relative;
   list-style-type: none;
 }
@@ -218,9 +223,6 @@ body {
   text-align: center;
   background-color: #ffe17f;
   text-decoration: none;
-  padding-left: 27px;
-
-
 }
 
 .navigation-user:hover {
@@ -238,18 +240,17 @@ body {
 .bascet {
   background-image: url("../images/icon\ \(bascet\).svg");
   background-repeat: no-repeat;
-  background-size: 14px 14px;
   background-position: left;
   margin-left: 21px;
+  padding-left: 28px;
 }
 
 .sort {
   background-image: url("../images/icon\ \(sort\).svg");
   background-repeat: no-repeat;
-  background-size: 14px 14px;
   background-position: left;
-  margin-left: 21px;
-
+  margin-left: 8px;
+  padding-left: 23px;
 }
 
 .profile {
@@ -257,7 +258,8 @@ body {
   background-repeat: no-repeat;
   background-size: 14px 14px;
   background-position: left;
-  margin-left: 21px;
+  margin-left: 19px;
+  padding-left: 27px;
 }
 
 .navigation-user-exit {
@@ -267,7 +269,7 @@ body {
   opacity: 0.3;
   border: none;
   background-color: #FFE17F;
-  margin-left: 28px;
+  margin-left: 15px;
 }
 
 .count {
@@ -278,8 +280,9 @@ body {
   cursor: pointer;
   background: #ffffff;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 18px;
   left: -12px;
+  top: 6px;
 }
 
 
@@ -432,7 +435,6 @@ body {
 .navigation-catalog .navigation-link {
   padding: 15px 0;
   margin-right: 47px;
-  margin-bottom: 43px;
 }
 
 .catalog-circle {
@@ -550,20 +552,23 @@ body {
 .navigation-second {
   position: absolute;
   top: 120px;
-  right: 5px;
+  right: 10px;
 }
 
 .navigation-second .navigation-link {
   min-width: 127px;
   min-height: 21px;
-  padding: 15px 0;
+  padding: 12px 0;
   margin-right: 40px;
 }
 
 .navigation-second .navigation-link:last-child {
-  margin-right: 45px;
+  margin-right: 46px;
 }
 
+.garantee-link {
+  margin-right: 4px;
+}
 
 .main-container {
   flex-grow: 1;
@@ -572,18 +577,19 @@ body {
 
 
 .yellow-shadow {
-  box-shadow: inset 0 150px 0 #FFE17F;
+  box-shadow: inset 0 132px 0 #FFE17F;
 }
 
 .slider-pagination-new {
   position: relative;
   margin: 0;
   padding: 0;
+  max-height: 515px;
 }
 
 .slider-pagination {
   width: 560px;
-  margin-top: 120px;
+  margin-top: 100px;
 }
 
 
@@ -596,7 +602,7 @@ body {
 .slider-pagination-img {
   position: relative;
   width: 560px;
-  top: 0;
+  top: -17px;
 }
 
 .slider-point-pagination {
@@ -671,7 +677,7 @@ body {
 .slider-prev {
   position: absolute;
   top: 37%;
-  left: 0;
+  left: 14px;
   background-image: url("../images/icon\ \(left-tall-arrow\).svg");
   background-position: center;
   background-repeat: no-repeat;
@@ -697,7 +703,7 @@ body {
 .slider-next {
   position: absolute;
   top: 37%;
-  right: 0;
+  right: -14px;
   background-image: url("../images/icon\ \(right-tall-arrow\).svg");
   background-position: center;
   background-repeat: no-repeat;
@@ -721,14 +727,14 @@ body {
 }
 
 
-
 .slider-number {
   position: absolute;
-  top: 70px;
-  right: 27px;
-  font-weight: 700;
+  top: 55px;
+  right: 37px;
+  font-weight: 800;
   font-size: 180px;
   line-height: 30px;
+  letter-spacing: -8px;
   align-items: center;
   text-align: right;
   color: #ffffff;
@@ -738,11 +744,14 @@ body {
 .slider-pagination .title {
   position: relative;
   z-index: 3;
+  letter-spacing: -3.5px;
 }
 
 .slider-pagination .text {
-  margin-top: 29px;
+  width: 550px;
+  margin-top: 26px;
   margin-bottom: 50px;
+  letter-spacing: 0.3px;
 }
 
 .button-discover {
@@ -754,7 +763,7 @@ body {
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
-  letter-spacing: 0.2em;
+  letter-spacing: 0.1em;
   text-align: center;
   text-transform: uppercase;
   color: #000000;
@@ -804,41 +813,46 @@ body {
   }
 }
 
+.button-discover__details {
+  width: 180px;
+}
+
 .table {
   border-collapse: collapse;
   display: block;
-  margin-top: 50px;
+  margin-top: 37px;
 }
 
 .row {
   display: block;
   float: left;
-  margin-right: 20px;
+  margin-right: 18px;
 }
 
 .column-1 {
   box-sizing: border-box;
   font-size: 36px;
   line-height: 30px;
-  padding: 10px;
+  padding-top: 11px;
   display: block;
   width: 100%;
   white-space: nowrap;
+  letter-spacing: 1.6px;
 }
 
 .column-2 {
   box-sizing: border-box;
-  padding: 10px;
   display: block;
   width: 100%;
   white-space: nowrap;
+  padding-top: 11px;
+  letter-spacing: -0.8px;
 }
 
 
 
-
 .all-our-products {
-  margin: 70px 140px;
+  margin: 68px 140px 52px;
 }
 
 .all-our-products-block {
@@ -868,7 +882,7 @@ body {
   background-position: 50% 50%;
   align-items: center;
   text-align: bottom;
-  margin-bottom: 32px;
+  margin-bottom: 33px;
 }
 
 .products-images {
@@ -881,10 +895,11 @@ body {
   font-family: raleway, sans-serif;
   font-style: normal;
   font-weight: 800;
-  font-size: 18px;
-  line-height: 24px;
-  letter-spacing: -0.02em;
+  font-size: 16px;
+  line-height: 22px;
+  letter-spacing: -0.1px;
   color: #000000;
+padding: 0 -1.5px;
 }
 
 .products:hover {
@@ -906,7 +921,7 @@ body {
 .services {
   position: relative;
   width: 287px;
-  margin: 64px 0 65px;
+  margin: 62px 0 65px;
   padding: 0;
 
 }
@@ -916,8 +931,8 @@ body {
   content: "";
   border-right: 7px solid #000000;
   Height: 319px;
-  bottom: 0;
-  right: 5px;
+  bottom: -5px;
+  right: 0;
 }
 
 
@@ -940,8 +955,8 @@ body {
   padding-bottom: 35px;
 }
 
-.services-credit .button-discover {
-  width: 180px;
+.button-discover__services {
+  width: 160px;
 }
 
 .button-discover-current::before {
@@ -967,12 +982,20 @@ body {
 
 .services-delivery__description {
   position: relative;
-  margin-top: 92px;
-  margin-right: 43px;
+  margin-top: 90px;
+  margin-right: 35px;
+  margin-left: -28px;
+}
+
+.services-delivery__title {
+  letter-spacing: -3px;
 }
 
 .services-delivery__description .text {
-  width: 475px;
+  width: 455px;
+  margin-top: 31px;
+  padding: 0;
+  letter-spacing: 0.3px;
 }
 
 .delivery {
@@ -980,7 +1003,7 @@ body {
   background-image: url("../images/Courier.svg");
   width: 136px;
   height: 164px;
-  top: 1px;
+  top: 5px;
   right: 28px;
 }
 
@@ -1022,7 +1045,7 @@ body {
 
 
 .special-delivery {
-  margin: 70px 140px;
+  margin: 82px 140px 77px;
 }
 
 .special-delivery__button {
@@ -1060,9 +1083,10 @@ body {
   font-size: 20px;
   line-height: 23px;
   text-align: center;
-  letter-spacing: 0.2em;
+  letter-spacing: 2.2px;
   text-transform: uppercase;
   color: #000000;
+  margin-right: 125px;
 }
 
 .special-delivery__inform {
@@ -1095,15 +1119,25 @@ body {
   justify-content: space-between;
 }
 
+.index__title {
+  margin: 39px 0 49px;
+  letter-spacing: -5px;
+}
+.index__title__contacts {
+  margin: 39px 0 49px;
+  letter-spacing: -3.2px;
+}
 .index-columns .text {
   font-size: 18px;
   line-height: 30px;
   color: #444444;
+  margin: 30px 0;
+  letter-spacing: 0.3px;
 }
 
 .index-columns {
   position: relative;
-  width: 50%;
+  width: 532px;
 }
 
 .index-columns::before {
@@ -1120,7 +1154,7 @@ body {
   color: #000000;
   list-style-type: none;
   margin: 0;
-  padding: 30px 0 30px 3px;
+  padding: 0 0 11px 3px;
 }
 
 .index-columns__item {
@@ -1147,6 +1181,9 @@ body {
 
 }
 
+.button-discover__index {
+  width: 230px;
+}
 
 .index-columns .button-services {
   font-family: raleway, sans-serif;
@@ -1169,12 +1206,21 @@ body {
   font-size: 24px;
   line-height: 30px;
   color: #444444;
+  letter-spacing: 1.1px;
+  margin: 0;
+  padding: 0;
+}
+.index-columns-subtitle__time {
+  margin: 29px 0 15px;
+  letter-spacing: 0.2px;
 }
 
 .index-columns .addres {
   font-size: 18px;
   line-height: 30px;
   color: #444444;
+  margin: 16px 0 0 0;
+  letter-spacing: 0.4px;
 }
 
 .index-columns-phone {
@@ -1195,35 +1241,46 @@ body {
   font-size: 18px;
   line-height: 30px;
   color: #444444;
+  letter-spacing: -0.1px;
 }
 
+.button-discover__contacts {
+  width: 217px;
+}
 
 
 .mailing {
   box-sizing: border-box;
+  max-height: 420px;
   margin-top: 70px;
   background: #F0F0F0;
-  padding: 64px 0 56px;
+  padding: 0;
 }
 
 .mailing .title {
   display: block;
-  width: 580px;
+  width: 555px;
+  letter-spacing: -3.9px;
+  margin-left: 5px;
+  margin-top: 59px;
 }
 
 .mailing .text {
-  width: 580px;
+  width: 555px;
   color: #444444;
   font-size: 18px;
   line-height: 30px;
+  margin-top: 73px;
+    letter-spacing: 0.5px;
 }
 
 .mailing-form {
   width: 810px;
   display: flex;
   align-items: center;
-  margin-top: 144px;
+  margin: 127px 0;
 }
+
 
 .mailing-text {
   box-sizing: border-box;
@@ -1272,8 +1329,12 @@ body {
   background-color: #F0F0F0;
   border: 3px solid #C4C4C4;
   text-decoration: none;
-  width: 235px;
+  width: 255px;
   height: 57px;
+}
+.mailing-form .action {
+  letter-spacing: 3.5px;
+  padding-left: 5px;
 }
 
 .this-free {
@@ -1284,10 +1345,10 @@ body {
   background-size: 14px 14px;
   background-position: left;
   padding-left: 30px;
-  width: 160px;
+  width: 130px;
   line-height: 30px;
   color: #444444;
-  margin-top: 144px;
+  margin: 0;
 }
 
 
@@ -1299,15 +1360,15 @@ body {
   margin-left: 60px;
 }
 
-.inner-header .title {
+.inner-header__title {
+  letter-spacing: -4.5px;
   margin-bottom: 16px;
 }
 
 .breadcrumbs-list {
   display: flex;
-  margin-left: 0;
-  padding-left: 0;
-  margin-bottom: 34px;
+  padding: 0;
+  margin: 8px 0 28px;
   z-index: 4;
 }
 
@@ -1333,7 +1394,9 @@ body {
   text-decoration: none;
   color: #000000;
 }
-
+.breadcrumbs-link__next {
+  letter-spacing: -0.8px;
+}
 
 .catalog-background {
   background-color: #F0F0F0;
@@ -1347,7 +1410,7 @@ body {
 .catalog-filter {
   box-sizing: border-box;
   width: 320px;
-  padding: 0 60px;
+  padding: 0 50px;
 }
 
 .catalog-filter-range {
@@ -1355,10 +1418,10 @@ body {
   font-style: normal;
   font-weight: 800;
   font-size: 16px;
-  letter-spacing: 0.2em;
   text-transform: uppercase;
   color: #000000;
-  margin: 25px 168px 25px 0;
+  margin: 20px 168px 52px 10px;
+    letter-spacing: 1.2px;
 }
 
 .broken-line-filter {
@@ -1367,8 +1430,10 @@ body {
   background: #000000;
   Width: 200px;
   height: 2px;
-  margin-top: 35px;
-  margin-bottom: 12px;
+  margin: 35px 0 12px 9.5px;
+}
+.broken-line-filter__radio {
+margin-top: 23px;
 }
 
 .filter-range {
@@ -1384,13 +1449,13 @@ body {
   font-size: 18px;
   line-height: 20px;
   color: #000000;
-  margin-top: 12px;
-  margin-bottom: 30px;
+  margin: 12px 0 29px 10px;
+
 }
 
 .range-controls {
   position: relative;
-  margin-bottom: 68px;
+  margin-bottom: 65px;
 }
 
 .range-controls .scale {
@@ -1437,7 +1502,7 @@ body {
 }
 
 .range-toggle-max {
-  left: 110px;
+  left: 119px;
 }
 
 .range-toggle .text {
@@ -1458,6 +1523,8 @@ body {
 
 .catalog-filter-group {
   border: none;
+  margin: 0 0 0 9px;
+  padding: 0;
 }
 
 
@@ -1465,6 +1532,7 @@ body {
   position: relative;
   display: block;
   padding-left: 36px;
+  margin-bottom: 6px;
 }
 
 .control-mark {
@@ -1472,11 +1540,10 @@ body {
   top: 2px;
   left: 0;
   box-sizing: border-box;
-  width: 23px;
-  height: 23px;
+  width: 21px;
+  height: 21px;
   border: 3px solid #CCCCCC;
   border-radius: 3px;
-  ;
 }
 
 .control:hover .control-mark {
@@ -1501,14 +1568,18 @@ body {
   height: 40px;
 }
 
+.control-color {
+  letter-spacing: -0.6px;
+}
+
 
 .catalog-filter-title {
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
-  letter-spacing: -0.02em;
+  letter-spacing: 0.4px;
   color: #000000;
-  margin-bottom: 20px;
+  margin-bottom: 18px;
 }
 
 .catalog-filter-list {
@@ -1518,7 +1589,6 @@ body {
 
 .catalog-filter-1 .catalog-filter-item {
   list-style-type: none;
-  margin-bottom: 17px;
 }
 
 .catalog-filter-1 .catalog-filter-item:last-child {
@@ -1527,7 +1597,6 @@ body {
 
 .catalog-filter-2 .catalog-filter-item {
   list-style-type: none;
-  margin-bottom: 17px;
 }
 
 .catalog-filter-2 .catalog-filter-item:last-child {
@@ -1544,8 +1613,8 @@ body {
   top: 2px;
   left: 0;
   box-sizing: border-box;
-  width: 26px;
-  height: 26px;
+  width: 21px;
+  height: 21px;
   border: 3px solid #CCCCCC;
   border-radius: 3px;
   ;
@@ -1558,8 +1627,8 @@ body {
 
 .control-input[type="radio"]:checked + .control-mark-2::before {
   position: absolute;
-  top: 25%;
-  left: 25%;
+  top: 2.5px;
+  left: 2.5px;
   width: 10px;
   height: 10px;
   background-color: #000000;
@@ -1571,6 +1640,17 @@ body {
   border: 3px solid #000000;
   border-radius: 50%;
 }
+
+.button-discover__filter {
+  width: 220px;
+  margin-top: 25px;
+  margin-left: 9px;
+}
+.button-discover__text__filter {
+  letter-spacing: 1.9px;
+}
+
+
 
 .sorting-container {
   display: flex;
@@ -1919,6 +1999,7 @@ body {
   font-weight: 400;
   color: #ffffff;
   background-color: #444444;
+  min-height: 321px;
 
 }
 
@@ -1945,22 +2026,23 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: stretch;
-  margin: 0 auto;
-  padding-top: 35px;
-  padding-bottom: 61px;
+  margin-top: 15px;
 }
 
 
 .footer-adress .contacts-address {
   position: relative;
   margin: 0;
+  width: 240px;
+  letter-spacing: 0.5px;
 }
+
 
 .footer-adress .contacts-address::after {
   position: absolute;
   content: "";
   border-right: 80px solid #FFC700;
-  bottom: -150%;
+  bottom: -175%;
   Height: 7px;
 }
 
@@ -1993,8 +2075,8 @@ address {
 
 .info-list {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
+  width: 550px;
   margin: 0;
   padding: 0;
 }
@@ -2025,7 +2107,7 @@ address {
   background-color: #444444;
   text-decoration: none;
   text-transform: uppercase;
-  padding: 15px 18px;
+  padding: 18px 16px 18px 18px;
   margin-bottom: 43px;
 }
 
@@ -2049,6 +2131,7 @@ address {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  width: 488px;
   margin: 0;
   padding: 0;
 }
@@ -2100,7 +2183,7 @@ address {
 
 .footer-contacts {
   min-width: 175px;
-  padding-top: 15px;
+  margin-top: 21px;
 }
 
 .footer-contacts-phone {
@@ -2133,8 +2216,8 @@ address {
   bottom: 0;
   left: 0;
   color: #ffc700;
-  margin-top: 70px;
-  margin-left: 70px;
+  margin-top: 64px;
+  margin-left: 63px;
 }
 
 .developer-logo-icon:hover {
