--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,7 +105,16 @@ body {
   top: -20px;
   left: 60px;
 }
-
+.navigation-logo:hover {
+  opacity: 0.6;
+}
+.navigation-logo:focus {
+  outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
+}
+.navigation-logo:active {
+  opacity: 0.3;
+}
 
 .navigation-form-search {
   width: 525px;
@@ -126,7 +135,7 @@ body {
   text-decoration: none;
   width: 359px;
   height: 40px;
-  background-image: url("../images/icon\ \(search\).svg");
+  background-image: url("../images/icon\(search\).svg");
   background-repeat: no-repeat;
   background-position: 16px;
   padding: 8px 14px 8px 42px;
@@ -231,6 +240,7 @@ body {
 
 .navigation-user:focus-visible {
   outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
 }
 
 .navigation-user:active {
@@ -238,7 +248,7 @@ body {
 }
 
 .bascet {
-  background-image: url("../images/icon\ \(bascet\).svg");
+  background-image: url("../images/icon\(bascet\).svg");
   background-repeat: no-repeat;
   background-position: left;
   margin-left: 21px;
@@ -246,7 +256,7 @@ body {
 }
 
 .sort {
-  background-image: url("../images/icon\ \(sort\).svg");
+  background-image: url("../images/icon\(sort\).svg");
   background-repeat: no-repeat;
   background-position: left;
   margin-left: 8px;
@@ -254,7 +264,7 @@ body {
 }
 
 .profile {
-  background-image: url("../images/icon\ \(login\).svg");
+  background-image: url("../images/icon\(login\).svg");
   background-repeat: no-repeat;
   background-size: 14px 14px;
   background-position: left;
@@ -288,15 +298,15 @@ body {
 
 .popover {
   position: absolute;
-  top: 35px;
-  right: -70px;
+  top: 40px;
+  right: -75px;
   z-index: 4;
   box-sizing: border-box;
   width: 320px;
   color: #ffffff;
   background-color: #000000;
   min-height: 200px;
-  display: none;
+
 }
 
 .popover-open {
@@ -305,7 +315,7 @@ body {
 
 .popover::before {
   position: absolute;
-  top: -8px;
+  top: -5px;
   left: 50%;
   width: 14px;
   height: 14px;
@@ -330,6 +340,23 @@ body {
   width: 280px;
   height: 50px;
 }
+.popover-open-button:hover {
+  background: #FFE17F;
+}
+
+.popover-open-button:focus-visible {
+  outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
+}
+
+.popover-open-button:active {
+  background: #FFE17F;
+  color: rgba(0, 0, 0, 0.3);;
+}
+.popover-open-button:disabled {
+  color: rgba(0, 0, 0, 0.3);;
+}
+
 
 .popover-cart {
   width: 320px;
@@ -364,6 +391,17 @@ body {
   justify-content: space-between;
 }
 
+.popover-cart-link:hover {
+  opacity: 0.6;
+}
+.popover-cart-link:focus {
+  outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
+}
+.popover-cart-link:active {
+  opacity: 0.3;
+}
+
 .cart-item__img {
   margin: 20px;
 }
@@ -382,6 +420,17 @@ body {
   color: #ffffff;
   padding: 0 20px 30px;
   margin: 0;
+}
+
+.cart-item-button:hover {
+  opacity: 0.6;
+}
+.cart-item-button:focus {
+  outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
+}
+.cart-item-button:active {
+  opacity: 0.3;
 }
 
 .cart-item + .cart-item {
@@ -448,7 +497,7 @@ body {
   margin-left: 20px;
   top: 1%;
   z-index: 1;
-  background-image: url("../images/icon\ \(plus\).svg");
+  background-image: url("../images/icon\(plus\).svg");
   background-repeat: no-repeat;
   background-size: 16px 16px;
   background-position: center;
@@ -460,6 +509,7 @@ body {
 
 .catalog-circle:focus-visible {
   outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
 }
 
 .catalog-circle:active {
@@ -477,7 +527,7 @@ body {
   margin-left: 20px;
   top: 1%;
   z-index: 1;
-  background-image: url("../images/icon\ \(minus\).svg");
+  background-image: url("../images/icon\(minus\).svg");
   background-repeat: no-repeat;
   background-size: 16px 16px;
   background-position: center;
@@ -490,6 +540,7 @@ body {
 
 .catalog-circle-minus:focus-visible {
   outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
 }
 
 .catalog-circle-minus:active {
@@ -577,19 +628,18 @@ body {
 
 
 .yellow-shadow {
-  box-shadow: inset 0 132px 0 #FFE17F;
+  box-shadow: inset 0 115px 0 #FFE17F;
 }
 
 .slider-pagination-new {
   position: relative;
   margin: 0;
   padding: 0;
-  max-height: 515px;
 }
 
 .slider-pagination {
   width: 560px;
-  margin-top: 100px;
+  margin-top: 85px;
 }
 
 
@@ -602,14 +652,14 @@ body {
 .slider-pagination-img {
   position: relative;
   width: 560px;
-  top: -17px;
+  top: -34px;
 }
 
 .slider-point-pagination {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 0;
+  margin: -66px 0 0 0;
   padding: 0;
   list-style-type: none;
 }
@@ -678,7 +728,7 @@ body {
   position: absolute;
   top: 37%;
   left: 14px;
-  background-image: url("../images/icon\ \(left-tall-arrow\).svg");
+  background-image: url("../images/icon\(left-tall-arrow\).svg");
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -686,16 +736,13 @@ body {
 .slider-prev:hover {
   opacity: 0.6;
 }
-
 .slider-prev:focus {
   outline: 2px solid #AF4FFF;
   outline-offset: 2px;
 }
-
 .slider-prev:active {
   opacity: 0.3;
 }
-
 .slider-prev:disabled {
   opacity: 0.1;
 }
@@ -704,7 +751,7 @@ body {
   position: absolute;
   top: 37%;
   right: -14px;
-  background-image: url("../images/icon\ \(right-tall-arrow\).svg");
+  background-image: url("../images/icon\(right-tall-arrow\).svg");
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -729,7 +776,7 @@ body {
 
 .slider-number {
   position: absolute;
-  top: 55px;
+  top: 40px;
   right: 37px;
   font-weight: 800;
   font-size: 180px;
@@ -829,7 +876,7 @@ body {
   margin-right: 18px;
 }
 
-.column-1 {
+.column-first {
   box-sizing: border-box;
   font-size: 36px;
   line-height: 30px;
@@ -840,7 +887,7 @@ body {
   letter-spacing: 1.6px;
 }
 
-.column-2 {
+.column-second {
   box-sizing: border-box;
   display: block;
   width: 100%;
@@ -867,6 +914,9 @@ body {
   width: 160px;
   height: 253px;
   vertical-align: top;
+}
+.products__monopods {
+  margin-top: 20%;
 }
 
 .button-products {
@@ -1098,7 +1148,7 @@ padding: 0 -1.5px;
   height: 40px;
   border-radius: 50%;
   border: none;
-  background-image: url("../images/icon\ \(i\).svg");
+  background-image: url("../images/icon\(i\).svg");
   background-repeat: no-repeat;
   background-position: center;
   background-color: rgba(68, 68, 68, 0.3);
@@ -1251,7 +1301,6 @@ padding: 0 -1.5px;
 
 .mailing {
   box-sizing: border-box;
-  max-height: 420px;
   margin-top: 70px;
   background: #F0F0F0;
   padding: 0;
@@ -1278,7 +1327,7 @@ padding: 0 -1.5px;
   width: 810px;
   display: flex;
   align-items: center;
-  margin: 127px 0;
+  margin: 127px 0 50px;
 }
 
 
@@ -1336,11 +1385,30 @@ padding: 0 -1.5px;
   letter-spacing: 3.5px;
   padding-left: 5px;
 }
+.mailing-form .action:hover {
+  background: #000000;
+ color: #FFFFFF;
+  border: 3px solid #000000;
+}
+.mailing-form .action:focus {
+  outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
+}
+.mailing-form .action:active {
+  background: #000000;
+  color: rgba(255, 255, 255, 1);
+   border: 3px solid #000000;
+}
+.mailing-form .action:disabled {
+  opacity: 0.3;
+  border: 3px solid #C4C4C4;
+}
+
 
 .this-free {
   display: flex;
   align-items: center;
-  background-image: url("../images/icon\ \(tick-big\).svg");
+  background-image: url("../images/icon\(tick-big\).svg");
   background-repeat: no-repeat;
   background-size: 14px 14px;
   background-position: left;
@@ -1348,7 +1416,7 @@ padding: 0 -1.5px;
   width: 130px;
   line-height: 30px;
   color: #444444;
-  margin: 0;
+  margin: 65px 0 0 0;
 }
 
 
@@ -1381,7 +1449,7 @@ padding: 0 -1.5px;
 .breadcrumbs-item:not(:last-child)::after {
   position: absolute;
   content: "";
-  background-image: url("../images/icon\ \(nav-arrow\).svg");
+  background-image: url("../images/icon\(nav-arrow\).svg");
   background-repeat: no-repeat;
   width: 4px;
   height: 7px;
@@ -1397,6 +1465,19 @@ padding: 0 -1.5px;
 .breadcrumbs-link__next {
   letter-spacing: -0.8px;
 }
+
+.breadcrumbs-link__next:hover {
+  opacity: 0.6;
+}
+.breadcrumbs-link__next:focus-visible {
+  outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
+}
+.breadcrumbs-link__next:active{
+  opacity: 0.3;
+}
+
+
 
 .catalog-background {
   background-color: #F0F0F0;
@@ -1489,6 +1570,7 @@ margin-top: 23px;
 .range-toggle:focus-visible {
   background: #EBEBEB;
   border: 2px solid #AF4FFF;
+  outline-offset: 2px;
 }
 
 .range-toggle:active {
@@ -1518,6 +1600,7 @@ margin-top: 23px;
 
 .range-toggle .text:focus-visible {
   outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
 }
 
 
@@ -1561,7 +1644,7 @@ margin-top: 23px;
   top: -12px;
   left: -13px;
   content: "";
-  background-image: url("../images/icon\ \(tick\).svg");
+  background-image: url("../images/icon\(tick\).svg");
   background-repeat: no-repeat;
   background-position: 16px;
   width: 40px;
@@ -1570,6 +1653,20 @@ margin-top: 23px;
 
 .control-color {
   letter-spacing: -0.6px;
+}
+
+.control-mark:hover {
+  opacity: 0.6;
+}
+.control-mark:focus {
+  outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
+}
+.control-mark:active {
+  opacity: 0.3;
+}
+.control-mark:disabled {
+  opacity: 0.1;
 }
 
 
@@ -1587,19 +1684,19 @@ margin-top: 23px;
   margin: 0;
 }
 
-.catalog-filter-1 .catalog-filter-item {
+.catalog-filter-first .catalog-filter-item {
   list-style-type: none;
 }
 
-.catalog-filter-1 .catalog-filter-item:last-child {
+.catalog-filter-first .catalog-filter-item:last-child {
   margin-bottom: 0;
 }
 
-.catalog-filter-2 .catalog-filter-item {
+.catalog-filter-second .catalog-filter-item {
   list-style-type: none;
 }
 
-.catalog-filter-2 .catalog-filter-item:last-child {
+.catalog-filter-second .catalog-filter-item:last-child {
   margin-bottom: 0;
 }
 
@@ -1608,7 +1705,7 @@ margin-top: 23px;
 }
 
 
-.control-mark-2 {
+.control-mark-second {
   position: absolute;
   top: 2px;
   left: 0;
@@ -1617,15 +1714,14 @@ margin-top: 23px;
   height: 21px;
   border: 3px solid #CCCCCC;
   border-radius: 3px;
-  ;
 }
 
-.control-input[type="radio"] + .control-mark-2 {
+.control-input[type="radio"] + .control-mark-second {
   border: 3px solid #CCCCCC;
   border-radius: 50%;
 }
 
-.control-input[type="radio"]:checked + .control-mark-2::before {
+.control-input[type="radio"]:checked + .control-mark-second::before {
   position: absolute;
   top: 2.5px;
   left: 2.5px;
@@ -1636,9 +1732,23 @@ margin-top: 23px;
   content: "";
 }
 
-.control-input:checked + .control-mark-2 {
+.control-input:checked + .control-mark-second {
   border: 3px solid #000000;
   border-radius: 50%;
+}
+
+.control-mark-second:hover {
+  opacity: 0.6;
+}
+.control-mark-second:focus {
+  outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
+}
+.control-mark-second:active {
+  opacity: 0.3;
+}
+.control-mark-second:disabled {
+  opacity: 0.1;
 }
 
 .button-discover__filter {
@@ -1670,11 +1780,10 @@ margin-top: 23px;
   font-size: 16px;
   line-height: 19px;
   width: 147px;
-
-  letter-spacing: 0.2em;
+  letter-spacing: 1.5px;
   text-transform: uppercase;
   color: #000000;
-  margin: 25.5px 206px 25.5px 20px;
+  margin: 25.5px 198px 25.5px 40px;
 }
 
 .select-control {
@@ -1685,18 +1794,31 @@ margin-top: 23px;
   background: #F0F0F0;
   font-size: 18px;
   line-height: 30px;
+  letter-spacing: 0.5px;
 }
 
+.select-control:hover {
+  opacity: 0.6;
+}
+.select-control:focus {
+  outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
+}
+.select-control:active {
+  opacity: 0.3;
+}
+.select-control:disabled {
+  opacity: 0.1;
+}
 
 .sorting .slider-button {
-  margin-right: 1px;
   box-sizing: border-box;
-  width: 30px;
+  width: 28px;
   height: 30px;
 }
 
 .slider-up {
-  background-image: url("../images/icon\ \(arrow-up\).svg");
+  background-image: url("../images/icon\(arrow-up\).svg");
   background-repeat: no-repeat;
   background-size: 11px 10px;
   background-position: center;
@@ -1705,7 +1827,7 @@ margin-top: 23px;
 }
 
 .slider-down {
-  background-image: url("../images/icon\ \(arrow-down\).svg");
+  background-image: url("../images/icon\(arrow-down\).svg");
   background-repeat: no-repeat;
   background-size: 11px 10px;
   background-position: center;
@@ -1723,6 +1845,7 @@ margin-top: 23px;
 
 .sorting .slider-button:focus-visible {
   outline: 1px solid #AF4FFF;
+  outline-offset: 2px;
 }
 
 .sorting .slider-button:active {
@@ -1804,12 +1927,12 @@ margin-top: 23px;
 
 
 .product-card-title {
-  width: 160px;
+  width: 215px;
   height: 40px;
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
-  letter-spacing: -0.02em;
+  letter-spacing: 0.5px;
   color: #000000;
 }
 
@@ -1845,7 +1968,7 @@ margin-top: 23px;
   font-style: normal;
   font-weight: 800;
   font-size: 16px;
-  letter-spacing: 0.2em;
+  letter-spacing: 1.8px;
   text-transform: uppercase;
   color: #000000;
   opacity: 1;
@@ -1854,9 +1977,15 @@ margin-top: 23px;
 .button-show-more:hover {
   border: 3px solid #000000;
 }
-
+.button-show-more:focus {
+  outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
+}
 .button-show-more:active {
   opacity: 0.3;
+}
+.button-show-more:disabled {
+  opacity: 0.1;
 }
 
 .pagination-container {
@@ -1892,6 +2021,7 @@ margin-top: 23px;
   .pagination-back:focus {
     background-color: #F0F0F0;
     outline: 2px solid #AF4FFF;
+    outline-offset: 2px;
   }
 }
 
@@ -1975,6 +2105,7 @@ margin-top: 23px;
   .pagination-next:focus {
     background-color: #F0F0F0;
     outline: 2px solid #AF4FFF;
+    outline-offset: 2px;
   }
 }
 
@@ -2349,13 +2480,13 @@ address {
 }
 
 .name-form-field {
-  background-image: url("../images/login\ light.svg");
+  background-image: url("../images/login_light.svg");
   background-repeat: no-repeat;
   background-position: 330px;
 }
 
 .mail-field {
-  background-image: url("../images/icon\ \(letter\).svg");
+  background-image: url("../images/icon\(letter\).svg");
   background-repeat: no-repeat;
   background-position: 330px;
 }
@@ -2386,7 +2517,7 @@ address {
   background-color: #FFE17F;
   padding: 0;
   border: none;
-  background-image: url("../images/icon\ \(i\).svg");
+  background-image: url("../images/icon\(i\).svg");
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -2395,7 +2526,7 @@ address {
 
 
 .button-less {
-  background-image: url("../images/icon\ \(minus\).svg");
+  background-image: url("../images/icon\(minus\).svg");
   background-repeat: no-repeat;
   background-position: center;
   border: none;
@@ -2415,7 +2546,7 @@ address {
 }
 
 .button-more {
-  background-image: url("../images/icon\ \(plus\).svg");
+  background-image: url("../images/icon\(plus\).svg");
   background-repeat: no-repeat;
   background-position: center;
   border: none;
